# price-trend-analysis

./: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.claude/: settings.local.json
data/processed/: cleaned_listings.parquet
data/raw/: bat_listings.parquet
notebooks/: 01_scraping.ipynb  02_eda.ipynb  03_linear_modeling.ipynb  03_modeling.ipynb  04_splines.ipynb  05_gaussian_processes.ipynb
src/price_analysis/: __init__.py  constants.py
src/price_analysis/data/: __init__.py  cleaning.py
src/price_analysis/models/: __init__.py  comparison.py  hierarchical.py  spline.py
src/price_analysis/scraping/: __init__.py  bat.py
src/price_analysis/visualization/: __init__.py  eda_viz.py  model_viz.py
tests/: conftest.py  test_cleaning.py  test_model.py  test_parsing.py  test_scraping.py  test_spline.py
tests/fixtures/: bat_listing_992.html  bat_listing_997.html  bat_search_page.html
